syntax = "proto3";
package genesis;

option go_package = "github.com/pokt-network/pocket/shared/types/genesis";

// TODO (team) move to utility module; pocket/issues/163
message Account {
  string address = 1;
  string amount = 2;
}

// TODO(andrew): move to p2p module; pocket/issues;163
enum Pool_Names {
  DAO = 0;
  FeeCollector = 1;
  AppStakePool = 2;
  ValidatorStakePool = 3;
  ServiceNodeStakePool = 4;
  FishermanStakePool = 5;
}
